# arquive

./: .gitignore  README.md  config.yaml  pyproject.toml  start-arquive.bat
docs/superpowers/specs/: 2026-03-18-face-detection-design.md
src/face_detect/: __init__.py  __main__.py  auth.py  cache_manager.py  cli.py  config.py  credential_vault.py  database.py  describe.py  dlna_server.py  gpu.py  indexer.py  metadata.py  orchestrator.py  transcoder.py  video_thumbs.py  webapp.py
src/face_detect/coordinator/: __init__.py  api.py  scheduler.py
src/face_detect/iptv/: __init__.py  channel_manager.py  epg_service.py  playlist_manager.py  recorder.py  stream_proxy.py
src/face_detect/reports/: __init__.py  generator.py
src/face_detect/sources/: __init__.py  ftp.py  local.py  smb.py  ssh_source.py
src/face_detect/worker/: __init__.py  client.py  local_worker.py  processor.py
tests/: conftest.py  test_api.py  test_auth.py  test_cache.py  test_config.py  test_database.py  test_integration_files.py  test_metadata.py
tvos/ArquiveTV/: ArquiveTVApp.swift
tvos/ArquiveTV/Models/: ArquiveAPI.swift  ArquiveMedia.swift
tvos/ArquiveTV/Views/: GalleryView.swift  NativePlayerView.swift
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/auth/: LoginScreen.tsx
web/src/components/iptv/: ChannelList.tsx  EPGGrid.tsx  NowPlaying.tsx  (+5 more)
web/src/hooks/: useIntersectionObserver.ts  useTheme.ts  useWebSocket.ts
web/src/styles/: globals.css
web/src/types/: index.ts
web/src/utils/: clipboard.ts
(+36 files in other folders)
