[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-detect"
version = "0.1.0"
description = "Distributed face recognition across media archives"
requires-python = ">=3.10,<3.14"
dependencies = [
    "insightface>=0.7",
    "onnxruntime-gpu>=1.17",
    "opencv-python>=4.8",
    "faiss-cpu>=1.7",
    "flask>=3.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "jinja2>=3.1",
    "requests>=2.31",
]

[project.scripts]
face-detect = "face_detect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
